fix: code hover overflow

--- a/resources/style.css
+++ b/resources/style.css
@@ -304,7 +304,7 @@ code, pre, swd-code {
     margin-bottom: var(--theme-element-spacing);
 }
 
-code:hover, pre:hover, swd-code {
+code:hover, pre:hover, swd-code:hover {
     overflow: auto;
 }
 
